@@ -1,0 +1,5 @@
+-- see:
+-- ru.mystamps.web.service.SiteService.getAbsentPageType()
+-- ru.mystamps.web.service.SiteService.getFailedAuthenticationType()
+INSERT INTO suspicious_activities_types(name)
+VALUES ('PageNotFound'), ('AuthenticationFailed');
