@@ -1,0 +1,7 @@
+jpa.dialectClassName=org.hibernate.dialect.HSQLDialect
+jpa.showSql=false
+hibernate.formatSql=true
+hibernate.hbm2ddl.auto=validate
+
+# needed for hibernate3-maven-plugin
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
