@@ -1,0 +1,17 @@
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:jdbc="http://www.springframework.org/schema/jdbc"
+	xsi:schemaLocation="http://www.springframework.org/schema/beans
+	http://www.springframework.org/schema/beans/spring-beans-3.0.xsd
+	http://www.springframework.org/schema/jdbc
+	http://www.springframework.org/schema/jdbc/spring-jdbc-3.0.xsd">
+	
+	<jdbc:embedded-database id="dataSource" type="HSQL">
+		<!-- hsql-scheme.sql generated by hibernate3-maven-plugin plugin -->
+		<jdbc:script location="classpath:hsql-scheme.sql" />
+		
+		<jdbc:script location="classpath:init-data.sql" />
+		<jdbc:script location="classpath:test-data.sql" />
+	</jdbc:embedded-database>
+	
+</beans>
